# elyx

./: .gitignore  flake.nix  pyproject.toml
.byte/: config.yaml
.byte/conventions/: CODE_PATTERNS.md  COMMENT_STANDARDS.md  PROJECT_ARCHITECTURE.md  TESTING_CODE_PATTERNS.md
elyx/: elyx  pyproject.toml
elyx/bootstrap/: app.py
elyx/src/elyx/: __init__.py  container.py  exceptions.py
elyx/src/elyx/collections/: __init__.py  arr.py  collection.py
elyx/src/elyx/config/: __init__.py  repository.py
elyx/src/elyx/console/: __init__.py  application.py  argument_parser.py  command.py  console.py  container_command_loader.py
elyx/src/elyx/container/: __init__.py  container.py  contextual_binding_builder.py  exceptions.py
elyx/src/elyx/contracts/: __init__.py  container_contract.py
elyx/src/elyx/contracts/collections/: __init__.py  array_access.py  collection.py
elyx/src/elyx/contracts/config/: __init__.py  repository.py
elyx/src/elyx/contracts/console/: __init__.py  application.py  application_contract.py  command.py  command_contract.py  kernel.py  kernel_contract.py
elyx/src/elyx/contracts/container/: __init__.py  container.py  container_contract.py  container_interface.py  container_interface_contract.py  contextual_binding_builder.py
elyx/src/elyx/contracts/events/: __init__.py  dispatcher.py
elyx/src/elyx/contracts/foundation/: __init__.py  application.py  bootstrapper.py
elyx/src/elyx/contracts/logging/: __init__.py  logger.py
elyx/src/elyx/contracts/support/: __init__.py  array_store_contract.py  service_provider.py
elyx/src/elyx/events/: __init__.py  dispatcher.py  event_service_provider.py
elyx/src/elyx/foundation/: __init__.py  application.py  environment_detector.py
elyx/src/elyx/foundation/bootstrap/: base.py  boot_providers.py  handle_exceptions.py  load_configuration.py  load_environment_variables.py  register_facades.py  register_providers.py
elyx/src/elyx/foundation/configuration/: application_builder.py
elyx/src/elyx/foundation/console/: about_command.py  kernel.py
elyx/src/elyx/foundation/events/: terminating.py
elyx/src/elyx/foundation/providers/: console_command_service_provider.py
elyx/src/elyx/logging/: __init__.py  console_logger.py  log_manager.py  log_service_provider.py
elyx/src/elyx/support/: __init__.py  arr.py  helpers.py  service_provider.py  str.py
elyx/src/elyx/support/concerns/: array_store.py  macroable.py  reflects_closures.py
elyx/src/elyx/support/facades/: __init__.py  config.py  facade.py
elyx/src/test/: base_test.py
elyx/src/test/collections/: arr_test.py
elyx/src/test/config/: repository_test.py
elyx/src/test/container/: container_test.py  contextual_binding_test.py  resolving_callback_test.py
elyx/src/test/events/: event_dispatcher_test.py  event_subscriber_test.py
elyx/src/test/foundation/: foundation_application_test.py  foundation_environment_detector_test.py
elyx/src/test/foundation/fixtures/config/: app.py  broadcasting.py
elyxate/: pyproject.toml
elyxate/src/elyxate/: __init__.py  container.py
elyxate/src/elyxate/contracts/: container_contract.py
elyxate/src/elyxate/foundation/: application.py
elyxate/src/elyxate/foundation/configuration/: application_builder.py
example/: lyx.py  pyproject.toml
example/app/: app_service_provider.py
example/app/console/commands/: test_command.py
example/bootstrap/: app.py  providers.py
example/config/: app.py  logging.py
src/elyx/: __main__.py
src/elyx/contracts/: console_kernel_contract.py
src/elyx/contracts/console/: application_contract.py  kernel_contract.py
src/elyx/foundation/: application.py
src/elyx/foundation/configuration/: application_builder.py
src/elyx/foundation/console/: application.py  kernel.py
