[project]
name = "base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = ["elyx", "elyxate"]


[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    # keep-sorted start
    "E",
    "F",
    "FURB",
    "G",
    "I",
    "ICN",
    "ISC",
    "LOG",
    "PIE",
    "PT",
    "Q",
    "RSE",
    "RUF",
    "T10",
    "UP",
    # keep-sorted end
]
ignore = [
    # keep-sorted start
    "E111",
    "E114",
    "E117",
    "E501",
    "E712",
    "ISC001",
    "PIE790",
    "Q001",
    "Q002",
    "Q003",
    "RUF005",
    "RUF006",
    "RUF012",
    "UP006",
    "UP007",
    "UP035",
    "UP045",
    "W191",
    # keep-sorted end
]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.basedpyright]
# keep-sorted start
exclude = ["**/node_modules", "**/__pycache__"]
include = ["src"]
pythonPlatform = "All"
pythonVersion = "3.12"
reportArgumentType = false
reportAttributeAccessIssue = false
reportIgnoreCommentWithoutRule = true
reportRedeclaration = false
reportUnnecessaryTypeIgnoreComment = "warning"
typeCheckingMode = "basic"
# keep-sorted end

executionEnvironments = [
    # { root = "src/tests", reportPrivateUsage = false, extraPaths = [
    #     "src/tests/e2e",
    # ] },
    { root = "elyx/src" },
    { root = "elyxate/src" },
]
