[project]
name = "elyx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "use-the-fork", email = "23747916+use-the-fork@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
elyx = "elyx:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
