
[project]
name = "elyx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "use-the-fork", email = "23747916+use-the-fork@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = ["python-dotenv>=1.2.1", "rich>=14.2.0"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.9",
    "ssort>=0.16.0",
    "ty>=0.0.4",
]

[project.scripts]
elyx = "elyx.__main__:main"

[tool.pytest.ini_options]
testpaths = ["src/test"]
norecursedirs = [".git", "fixtures"]
log_format = "%(asctime)s.%(msecs)03d %(levelname)-8s %(threadName)s %(name)s:%(filename)s:%(lineno)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "auto"
# addopts = ["--cov=elyx"]
addopts = ["--cov=elyx", "--cov-report=term-missing"]
# addopts = "--cov=. --cov-report=html --cov-report=term"


[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
