[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "use-the-fork", email = "23747916+use-the-fork@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = ["elyx"]

[tool.uv.sources]
elyx = { workspace = true }
